--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "beta",
     "normalize.css": "^6.0.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-favicon": "^0.0.8"
   }
 }
